# zellij-project-sidebar

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  zellij.kdl
nix/: module.nix
scripts/: opencode-sidebar.sh  opencode-sidebar.ts  reload-all.sh  sidebar-status.sh
src/: main.rs
src/init/: Cargo.toml
src/init/src/: main.rs
